--- a/Tetelan_kel'.mw
+++ b/Tetelan_kel'.mw
@@ -1,9 +1,9 @@
 {{Znamoičendad|Tetela}}
 '''Tetelan kel' ''' (ičeze nimituz: ''ɔtɛtɛla'') om [[bantu]]-gruppan kel', [[tetela (rahvaz)|tetela]]-rahvahan kel'. Sil pagištas [[Kongon Demokratine Tazovaldkund|KDT:n]] [[Päivnouzmaine Kasai]]-agjas, valdkundan keskuzpalan suvi. 
 
-Pagižijoiden lugu om 760 tuhad ristituid (1991), znamasine pala agjan ristitištos. Rahvahan toine kel' om [[francijan kel']]. Tetelan kirjkel' om sätud [[latinan kirjamišt]]on pohjal.
+Pagižijoiden lugu om 760 tuhad ristituid (1991), znamasine pala agjan ristitištos. Rahvahan toine kel' om [[francijan kel']]. Tetelan kirjkel' om sätud [[latinan kirjamišt]]on pohjal. [[Nkutu]] om lähembaine heimkel', pagištas siš-žo agjas.
 
-Grammatik lugeb substantividen 22 klassad (erine klass üks'lugun i äilugun täht), kaikutte kävutab ičeze prefiksoid toižiden bantu-keliden kartte.
+Grammatik lugeb substantividen 22 klassad (erine klass üks'lugun i äilugun täht), kaikutte kävutab ičeze prefiksoid toižiden bantu-keliden kartte. Kaik om 11 prefiksan toižendad. Ühtenzoittas klassoid kahesaks gruppaks.
 
 == Homaičendad ==
 <references />
