--- a/Msvati_III.mw
+++ b/Msvati_III.mw
@@ -1,8 +1,10 @@
 {{Personalii}}
-[[Fail:King of Swaziland.jpg|thumb|left|250px|Msvati III vl 2006.]]
+[[Fail:King of Swaziland.jpg|thumb|left|250px|Msvati III vl 2006]]
 '''Msvati III''' ({{lang-en|Mswati III}}; sünd. kuti ''Hänen Kunigahan Korktuz Mahosetive-princ'' [[10. sulaku]] [[1968]], [[Manzini]]-lidn, [[Esvatini]]) om kahtenz' da nügüdläine [[Esvatini]]n kunigaz, ohjastab vs 1986 sulakun 25. päiväspäi.
 
-Hänel om 13 akad i 25 last.
+Mez' om üks'jäine absolütine monarh Afrikan valdkundas. Udessünduti parlamentan radod, kudamb oli pästtud radmaspäi hänen tatal. Kunigaz om kuvatud Esvatinin jäl'gmäižiden serijoiden kaikiš banknotoiš. Otab kancleran radsijad Esvatinin universitetas. Kaik svazi anttas rahoid fondha, mitte ei ole kunigahan, no hän valdoičeb sen rajadusil.
+
+Msvati Koumandel om 15 akad i 36 last.
 
 == Homaičendad ==
 <references/>
