*Empty MediaWiki Message*

--- a/Msvati_III.mw
+++ b/Msvati_III.mw
@@ -4,7 +4,7 @@
 
 Mehen tat om valdkundan edeline [[Sobuza II]]-kunigaz, mam om [[Ntfombi Esvatinilaine]], hän om kunigaznaine-mam-arvonke nügüd'.
 
-Msvati Koumanz' om üks'jäine absolütine monarh Afrikan valdkundas. Udessünduti parlamentan radod, kudamb oli pästtud radmaspäi hänen tatal. Kunigaz om kuvatud Esvatinin jäl'gmäižiden serijoiden kaikiš banknotoiš. Otab kancleran radsijad Esvatinin universitetas. Kaik svazi anttas rahoid fondha, mitte ei ole kunigahan, no hän valdoičeb sen rajadusil.
+Msvati Koumanz' om üks'jäine absolütine monarh Afrikan valdkundas. Udessünduti parlamentan radod, kudamb oli pästtud radmaspäi hänen tatal. Kunigaz om kuvatud Esvatinin jäl'gmäižiden serijoiden kaikiš banknotoiš. Otab kancleran radsijad Esvatinin universitetas. Kaik svazi anttas rahoid Tibijo Taka Ngvane-fondha, mitte ei ole kunigahan, no hän valdoičeb sen rajadusil.
 
 Msvati Koumandel om 15 akad i 36 last.
 
