--- a/Armenijan_valdkundznam.mw
+++ b/Armenijan_valdkundznam.mw
@@ -1,7 +1,22 @@
 [[Fail:Coat of arms of Armenia.svg|right|250px]]
-'''Armenijan valdkundznam''' ({{lang-hy|Հայաստանի Հանրապետության զինանշան}}) om [[Armenijan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Se om vahvištadud [[1992]]-nden voden 19. päiväl sulakud, ümbrikirjutand om ližatud käskusel vs 2006 kezakun 15. päiväspäi.
+'''Armenijan valdkundznam''' ({{lang-hy|Հայաստանի Հանրապետության զինանշան}} ''Hajastani zinanšan'') om [[Armenijan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Se om vahvištadud [[1992]]-nden voden 19. päiväl sulakud, ümbrikirjutand om ližatud käskusel vs 2006 kezakun 15. päiväspäi.
 
 Ezmäižen Armenijan Tazovaldkundan (1918−1920) znam om ottud nügüdläižen valdkundznaman aluseks. Aleksandr Tamanän-arhitektor i Akop Kodžojan-pirdai sätihe sidä znamad.
+
+== Ümbrikirjutand ==
+Somuzlaud kuvadase valdkundznaman keskuses, sil om [[Ararat]]-mägi — [[armenijalaižed]]-rahvahan simvol. Noin laiv om mägenpäl, sikš miše sur'veden jäl'ghe laiv 
+seižuti arni necil mägel Biblijan veroližen traktuindan mödhe. Somuzlaud om jagadud nelläks tazostadud sekcijaks, miččed oma nellän ripmatoman armenižen car'kundan simvolikš Armenijan istorijas:
+* ülähän huralpäi — [[Bagratidad|Bagratidoiden]],
+* ülähän oiktalpäi — [[Aršakidad|Aršakidoiden]],
+* alahan huralpäi — [[Artašesidad|Artašesidoiden]],
+* alahan oiktalpäi — [[Rubenidad|Rubenidoiden]].
+
+Lev i Orl pid'oiteldas somuzlaudan polišpäi, hö oma živatišton carikš, melevuden, ülenpäižusen, tirpandan da hüvän rodun znamad. Ned živatad oliba cariden roduiden simvolikš äjiš voz'sadoiš.
+
+Valdkundznaman mujud tošttas [[Armenijan flag]]an mujuid.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:National coats of arms of Armenia}}
 
