--- a/Baikal'sk.mw
+++ b/Baikal'sk.mw
@@ -1,8 +1,8 @@
 {{Eländpunkt
  | Nimi = Baikal'sk<br />Байкальск
- | Lidnanznam =
+ | Lidnanznam = Baykalsk COA (2011).gif
  | Flag = Flag of Baykalskoe (Irkutsk oblast).svg
- | Lidnanznam text =
+ | Lidnanznam text = Baikal'skan lidnanznam
  | Flag text = Baikal'skan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 12,738
@@ -29,9 +29,20 @@ Heinkun lämuz — +16 C°, vilukun i uhokun — −14,4..−14,8 C°. Voden kes
 Solzan-žilo (602 rist. vl 2012) i Osinovk-žilo (kaikenaigaižeta ristitištota vl 2012) mülüdas lidnankundha Baikal'skan ližaks. Lidnankundan pind — 819,25 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 583 ristitud. Kaikiš suremb lidnan ristitišt oli 17 200 eläjad vl 1998. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Stroican jumalanpert' om olmas vspäi 1778.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 13 583 ristitud. Kaikiš suremb lidnan ristitišt oli 17 200 eläjad vl 1998.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Stroican jumalanpert' om olmas vspäi 1778.
 
 Baikal'skan saraktehnologijoiden da holitusen tehnikum om professionaližen opendusen aluzkundaks.<ref>[http://btotis.ru/ Baikal'skan tehnikuman oficialine sait (''btotis.ru'').]</ref>
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Museum of Baikalsk.jpg|Lidnan istoriž-čomamahtoine muzei (2011)
+Baikalsk Church.jpg|Pühän Stroican jumalanpert', vn 2011 nägu
+Клубника - один из символов Байкальска.jpg|Sadmanzikaižen festival' oleskeleb lidnas heinkun lopus
+Hotel complex of mountain-skiing base.jpg|Mägisuks'bazan adivpertiden kompleks (2018)
+Baykalsk station.jpg|Baikal'sk-päraudtestancijan sauvuz vl 2011
+</gallery>
 
 == Homaičendad ==
 <references/>
