--- a/Vihorevk.mw
+++ b/Vihorevk.mw
@@ -1,14 +1,14 @@
 {{Eländpunkt
  | Nimi = Vihorevk<br />Вихоревка
  | Lidnanznam =
- | Flag =
+ | Flag = Flag of Vikhorevskoe.png
  | Lidnanznam text =
- | Flag text =
+ | Flag text = Vihorevkan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 21,279
  | Voz' = 2017
- | Pind = 85
- | Fail = Вихоревка.jpg
+ | Pind = 15
+ | Fail = Vikhorevka - railway station square.jpg
  | Pämez' = Nikolai Družinin<br />(sügüz'ku 2017—)
  | Telefonkod = +7-3953-xxx-xxx
  | Avtokod = 38. 85. 138
@@ -27,9 +27,18 @@ Lidn sijadase Vihorev-jogen hural randal ({{lang-ru|Вихорева}}, [[Angar 
 Vihorevk om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 1 325,87 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 22 520 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli enamba 24 tuhad eläjid vll 1992−2009 (24 800 eläjad vll 2005−2006). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan pühäpert' (om saudud vll 1994−1997) da kaks' loičendpertid oma olmas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 22 520 ristitud, rajonan kaks' videndest. Kaikiš suremb ristitišt oli enamba 24 tuhad eläjid vll 1992−2009 (24 800 eläjad vll 2005−2006).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan pühäpert' (om saudud vll 1994−1997) da kaks' loičendpertid oma olmas.
 
 Bratskan professionaližen tehnikuman filial om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Stele in honor of Vikhor Savin at the station square.jpg|Muštnik Jeniseiskan Vihor' Savin-sur'oigenun oiktastuseks, om pandud vl 2015
+Russian locomotive Yem-4249.jpg|Puruvedim-muštnik
+Вихоревка.jpg|Vihorevk-päraudtestancijan sauvuz vl 2018
+</gallery>
 
 == Irdkosketused ==
 * [http://admvih.ru/ Lidnankundan tobmuden aluzkundoiden oficialine portal (''admvih.ru'').] {{ref-ru}}
