*Empty MediaWiki Message*

--- a/Vihorevk.mw
+++ b/Vihorevk.mw
@@ -35,7 +35,7 @@ Bratskan professionaližen tehnikuman filial om professionaližen opendusen aluz
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Stele in honor of Vikhor Savin at the station square.jpg|Muštnik Jeniseiskan Vihor' Savin-sur'oigenun oiktastuseks, om pandud vl 2015
+Stele in honor of Vikhor Savin at the station square.jpg|Muštnik Jeniseiskan Vihor' Savin-sur'oigenuden oiktastuseks, om pandud vl 2015
 Russian locomotive Yem-4249.jpg|Puruvedim-muštnik
 Вихоревка.jpg|Vihorevk-päraudtestancijan sauvuz vl 2018
 </gallery>
