*Empty MediaWiki Message*

--- a/Vihorevk.mw
+++ b/Vihorevk.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1947 sauvomha «[[Taišet]] — [[Ust'-Kut|Len]]»-raudted, nimitihe jogen mödhe. Kävutihe ottud plenha verazmalaižiden töid. Radnikžilo sai lidnan statusad vl 1966.
 
-Lidn šingotase raudten edheotandoil (kaks' vedimdepod, vagondepo, raudten distancii, kohenduzedheotandad) i mecan varhapanendal da ümbriradmižel.
+Vihorevk šingotase raudten edheotandoil (kaks' vedimdepod, vagondepo, raudten distancii, kohenduzedheotandad) i mecan varhapanendal da ümbriradmižel.
 
 == Geografijan andmused ==
 Lidn sijadase Vihorev-jogen hural randal ({{lang-ru|Вихорева}}, [[Angar (jogi)|Angar-jogen]] hurapol'ne bassein), Vihorev-jogen da sen Ub'-ližajogen keskes, 365 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 472 km suvipäivnouzmha-suvhe orhal, 600 km avtotedme vai 916 km raudtedme. Lähembaine lidn om [[Bratsk]] 10 km päivnouzmha orhal sen röunhasai, 43 km avtotedme (Bratskan keskushesai) vai 30 km raudtedme (Bratsk-stancijhasai).
