*Empty MediaWiki Message*

--- a/Jälgestai_Kal'kuttaspäi.mw
+++ b/Jälgestai_Kal'kuttaspäi.mw
@@ -2,7 +2,7 @@
 
 Säduz om kirjutadud lagerin arvoimižiš vll 1950−1951, «Salehard — Igark»-raudten sauvomižel. Štil'markan pämez' napri anastada avtorust hänelpäi, sada Stalinan premijad i päzutandad, no vl 1959 Robert todesti käskuzkundas ičeze üks'jäšt avtorust. Kirj om pästtud ezmäižen kerdan [[Nevondkundaline Ühtištuz|NSTÜ:hü]] vl [[1958]] i kändihe bestselleraks.
 
-Romanan severz'-se toštmižpästandoid om tehtud 1980-nziden voziden lopus, sil aigal voimuz ozutihe starinoita sädusen sündundan todesižes istorijas, i kundan mel'hetartuz libui sen tagut. Štil'mark kirjuti romanan sädandan istorijas avtobiografižes «Vauktusen sül'»-romanas.
+Romanan severz'-se toštmižpästandoid om tehtud 1980-nziden voziden lopus, sil aigal voimuz ozutihe starinoita sädusen sündundan todesižes istorijas, i kundan mel'hetartuz libui sen tagut. Štil'mark kirjuti romanan sädandan istorijas avtobiografižes «Vauktusen kahmal»-romanas.
 
 Romanan tegend šingotase 18. voz'sadal, Suriden geografižiden avaidusiden aigan lopus, Industrialižen revolücijan Anglijas aigan, konz [[Britanijan imperii]] zavodiše formirundad.
 
