--- a/Eva.mw
+++ b/Eva.mw
@@ -6,7 +6,7 @@
 }}
 '''Eva''' ({{lang-he|‏חַוָּה‏‎}}, amuine virkand ''xawwͻ:h'', nüg. ''Hava'' «elon andai», «eläb», {{lang-el|Εὔα}} ''Eva'', islamižes veros — ''Havva'') om ezmäine [[naine]] [[Tora]]n, [[Biblii|Biblijan]] da [[Koran]]an mödhe, kaiken ristitkundan ezimam.
 
-Eva oli [[Adam]]an ak, kudamban [[Jumal]] oli tehnu Adaman kül'gespäi. Eva sai ičeze nimen Adamalpäi. [[Vanh Zavet|Vanhan Zavetan]] sanutesen mödhe [[kü]] maniti händast, miše hän söiži hüvüden i pahuden tedon pun plodud. Koume last oli sündnus Evaspäi: [[Kain]], [[Avel']] i [[Sif]].
+Eva oli [[Adam]]an ak, kudamban [[Jumal]] oli tehnu Adaman kül'gespäi. Eva sai ičeze nimen Adamalpäi. [[Vanh Zavet|Vanhan Zavetan]] sanutesen mödhe [[kü]] maniti händast, miše hän söiži hüvüden i pahuden tedon pun plodud. Koume last oli sündnus Evaspäi: [[Kain]], [[Avel']] i [[Sif]]. Eva om mahapandud [[Patriarhoiden kar]]as (mugažo kut Adam-ki, [[Hevron]], Izrailin Palestinan avtonomii) evrejan veron mödhe, vai [[Evan kaum]]as ([[Džidd]], Saudan Arabii) islaman veron mödhe.
 
 Ortodoksižes hristanuskondas Evan mušton päiv om tal'vkun jäl'gmäine pühäpäiv.
 
