--- a/Mors.mw
+++ b/Mors.mw
@@ -3,7 +3,9 @@
 
 Jom mainitase Venämas 16. voz'sadaspäi (babarmmors «[[Domostroi]]š»). Voib kaita astjoid morsanke pertin vilus karzn'as kuiš läbi. Erasiden receptoiden mödhe, keittas morsad i sid' vilugoittas.
 
-Kävutadas muite räkän sän aigan i ližatas [[alkogoližed jomad|alkogoližihe jomihe]].
+Ende tegihe bolvet muga: valatihe veresid marjoid kehujal vedel purtkespäi i sid' jättihe päiveseks muite. Sanu jom om ruskedvauvhan mujun i muigedmagedan magun. Nügüd'aigaižil tegimil tehtas morsad [[südäivezi]]špäi kupažiruindal saharsiropanke i jondvedenke, erasti ottas kävutamižhe plodmarjekstraktoid südäiveden sijas ližadusidenke.
+
+Kävutadas morsad muite räkän sän aigan i ližatas [[alkogoližed jomad|alkogoližihe jomihe]].
 
 == Homaičendad ==
 <references />
