--- a/Permin_komin_kel'.mw
+++ b/Permin_komin_kel'.mw
@@ -1,13 +1,16 @@
-[[Fail:Komibooklg.png|thumb|right|200px|Permin komin kelen openduzkirj.]]
+[[Fail:Komibooklg.png|thumb|right|200px|Permin komin kelen openduzkirj]]
 '''Permin komin kel'''' (ičeze nimitused: ''Перем коми кыв'', ''коми-пермяцкöй кыв'') om [[permin komilaižed|permin komilaižiden]] kel', üks' [[komin kel'|komin kelen]] päpaginoišpäi ([[permižed keled|permižiden keliden grupp]]) ičeze kirjstandartanke.
 
-Permin komin kel' om [[Permin Komin ümbrik]]on oficialine kel'. [[Permin rand]]an Päkäskusen 42. kirjutusen mödhe, sil om mugoi oficialine status: sab kävutada kel't oficialižiden kosketusiden sferas.
+Permin komin kel' om [[Venäma]]n [[Permin Komin ümbrik]]on oficialine kel'. [[Permin rand]]an Päkäskusen 42. kirjutusen mödhe, sil om mugoi oficialine status: sab kävutada kel't oficialižiden kosketusiden sferas.
 
-Pagižijoiden lugu — 63 106 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine).
+Pagižijoiden lugu — 63 106 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan kaks' koumandest. Toine kel' om [[venän kel']].
 
 == Kacu mugažo ==
 * [[Komi-ziränine kel']]
 * [[Komi-jäz'van kel']]
+
+== Homaičendad ==
+<references />
 
 {{Venäman valdkundaližed keled}}
 
