--- a/Permin_komin_kel'.mw
+++ b/Permin_komin_kel'.mw
@@ -5,7 +5,10 @@ Permin komin kel' om [[Venäma]]n [[Permin Komin ümbrik]]on oficialine kel'. [[
 
 Pagižijoiden lugu — 63 106 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan kaks' koumandest. Toine kel' om [[venän kel']].
 
+Kirjkel' om [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal.
+
 == Kacu mugažo ==
+* [[Permin komin Vikipedii]]
 * [[Komi-ziränine kel']]
 * [[Komi-jäz'van kel']]
 
