--- a/Azartvändbiznes.mw
+++ b/Azartvändbiznes.mw
@@ -1,12 +1,14 @@
 '''[[Azartvänd]]oiden industrii''' mülütab ičheze:
-* [[kazino]]d
+* [[kazino]]d, sidä kesken internet-kazinod
 * [[vändavtomat]]oiden zalad ([[vändhonuz|vändhonused]])
 * [[bukmeker]]kontorad
 * [[totalizator]]ad
 * voibištelend [[loterei|loterejiš]]
 da toižed.
 
-Järedad azartvändbizneskeskused oma [[Las Vegas]]as ([[AÜV]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as, [[Rino]]s (AÜV) da tž.
+Valdkund reguliruib necen sferan edheotandoid valdkundmaksal azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid.
+
+Järedad azartvändbizneskeskused oma [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as da tž.
 
 == Kacu mugažo ==
 * [[Azartvändbiznes Venämas]] ([[azartvändzon]])
