--- a/Azartvändbiznes.mw
+++ b/Azartvändbiznes.mw
@@ -8,6 +8,8 @@ da toižed.
 
 Valdkund reguliruib necen sferan edheotandoid valdkundmaksal azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid.
 
+Industrijan radmine om teravha rahaližaha vai kaluližaha sidodud. Käskusišt paneb röunadusid azartvändoiden ühtnijoiden täht, ozutesikš, minimaline igä, psihine olend (psihižita läžundoita, humalduseta).
+
 Järedad azartvändbizneskeskused oma [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as da tž.
 
 == Kacu mugažo ==
