*Empty MediaWiki Message*

--- a/Azartvändbiznes.mw
+++ b/Azartvändbiznes.mw
@@ -6,7 +6,7 @@
 * voibištelend [[loterei|loterejiš]]
 da toižed.
 
-Valdkund reguliruib necen sferan edheotandoid valdkundmaksal azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid.
+Valdkund reguliruib necen sferan edheotandoid [[valdkundmaks]]al azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid päiči korrupcijan statjoiš.
 
 Industrijan radmine om teravha rahaližaha vai kaluližaha sidodud. Käskusišt paneb röunadusid azartvändoiden ühtnijoiden täht, ozutesikš, minimaline igä, psihine olend (psihižita läžundoita, humalduseta).
 
