--- a/Azartvändbiznes.mw
+++ b/Azartvändbiznes.mw
@@ -8,9 +8,9 @@ da toižed.
 
 Valdkund reguliruib necen sferan edheotandoid [[valdkundmaks]]al azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid päiči korrupcijan statjoiš.
 
-Industrijan radmine om teravha rahaližaha vai kaluližaha sidodud. Käskusišt paneb röunadusid azartvändoiden ühtnijoiden täht, ozutesikš, minimaline igä, psihine olend (psihižita läžundoita, humalduseta).
+Industrijan radmine om teravha rahaližaha vai kaluližaha sidodud, vändajiden polespäi — teravihe kiloihe paksus. Käskusišt paneb röunadusid azartvändoiden ühtnijoiden täht, ozutesikš, minimaline igä, psihine olend (psihižita läžundoita, humalduseta). Valdkundaline reguliruind voib mülütada sistemižid röunadusid: edheotandoiden kel'dand lokacijan da toižendan mödhe i laskend vaiše erasiš-se zonoiš (Venäma, Kazahstan), azartvändoiden valdkundaline monopolii (Suomenma), [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] severziš-se štatoiš vaiše [[indejalaižed]] voidas pidada kazinod i vaiše ičeze rezervacijoiš.
 
-Järedad azartvändbizneskeskused oma [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as da tž.
+Järedad azartvändbizneskeskused oma amerikaižes Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as da tž.
 
 == Kacu mugažo ==
 * [[Azartvändbiznes Venämas]] ([[azartvändzon]])
