--- a/Azartvändbiznes.mw
+++ b/Azartvändbiznes.mw
@@ -3,14 +3,13 @@
 * [[vändavtomat]]oiden zalad ([[vändhonuz|vändhonused]])
 * [[bukmeker]]kontorad
 * [[totalizator]]ad
-* voibištelend [[loterei|loterejiš]]
-da toižed.
+* voibištelend [[loterei|loterejiš]], sidä kesken valdkundaližed loterejad.
 
 Valdkund reguliruib necen sferan edheotandoid [[valdkundmaks]]al azartvändoišpäi. [[Peittud ekonomik]]an mel'hetartuz azartvändoihe om sur', no policii ecib i likvidiruib illegaližid edheotandoid päiči korrupcijan statjoiš.
 
 Industrijan radmine om teravha rahaližaha vai kaluližaha sidodud, vändajiden polespäi — teravihe kiloihe paksus. Käskusišt paneb röunadusid azartvändoiden ühtnijoiden täht, ozutesikš, minimaline igä, psihine olend (psihižita läžundoita, humalduseta). Valdkundaline reguliruind voib mülütada sistemižid röunadusid: edheotandoiden kel'dand lokacijan da toižendan mödhe i laskend vaiše erasiš-se zonoiš (Venäma, Kazahstan), azartvändoiden valdkundaline monopolii (Suomenma), [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] severziš-se štatoiš vaiše [[indejalaižed]] voidas pidada kazinod i vaiše ičeze rezervacijoiš.
 
-Järedad azartvändbizneskeskused oma amerikaižes Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as da tž.
+Järedad azartvändbizneskeskused ratas amerikaižes Nevad-štatas ([[Las Vegas]], [[Rino]]), [[Monte Karlo]]s ([[Monako]]), [[Makao]]s ([[Kitai]]), [[Singapur]]as.
 
 == Kacu mugažo ==
 * [[Azartvändbiznes Venämas]] ([[azartvändzon]])
