--- a/VAZ-2101.mw
+++ b/VAZ-2101.mw
@@ -6,6 +6,18 @@ Rahvahaližed lühüdad nimed oma ven. ''копейка'' (kopijk), ''едини
 
 Pästtihe avton modelid vll 1970−1988, VAZ-21013-modifikacijata — vhesai 1983. Kaik om tehtud 4,85 mln 2101-modelin avtod modifikacijoidenke. Enamba 57 tuhad avtoid möihe nevondkundaližen blokan verhiže maihe, sid' Päivlaskmaižen Evropan maihe i Afrikha, nimitihe eksportvariantad «Lada 1200».
 
+== Harakteristikad ==
+* Ajaimiden konorüt: mehanine, nell' pigut i tagapiguz
+* Bakan mülü: 39 litrad
+* Irdmärad: 4073 mm pitte, 1611 mm levette, 1382 mm kortte
+* Klirens: 170 mm
+* Kezroiden baz: 2424 mm
+* Raižu: ezine raižu 1349 mm, tagaine raižu 1305 mm
+* Veduz: 955 kg.
+
+== Homaičendad ==
+<references />
+
 {{Commons|Category:VAZ-2101}}
 
 {{stub}}
