--- a/Ust'-Kut.mw
+++ b/Ust'-Kut.mw
@@ -27,7 +27,9 @@ Lidn sijadase [[Len (jogi)|Lenan]] i sen huran Kut-ližajogen randoil, 291 m ü.
 Turuk-žilo (vai mikrorajon, {{lang-ru|Турука}}, 93 rist. vl 2010) mülüb lidnankundha Ust'-Kutan ližaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 45 375 ristitud, rajonan viž kudendest. Kaikiš suremb lidnan ristitišt oli 62 400 eläjid vl 1996. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 45 375 ristitud, rajonan viž kudendest. Kaikiš suremb lidnan ristitišt oli 62 400 eläjid vl 1996.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' jumalanpertid om olmas lidnas.
 
 Ust'-Kutan tegimištoline tehnikum<ref>[http://www.ukpt38.ru/ Tehnikuman oficialine sait (''ukpt38.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
 
@@ -35,6 +37,15 @@ Ust'-Kutan tegimištoline tehnikum<ref>[http://www.ukpt38.ru/ Tehnikuman oficial
 Lidn šingotase [[kivivoi]]n samižen da pompandan kompanijoiden bazaks, jogilaivištol i raudten edheotandoil, lämuzenergetikal, mecan ümbriradmižel pilindmaterialoihe i sömtegimištol (leibtegim, maidtegim).
 
 Avtobusad da taksid oma kundaližeks transportaks. Len om päraudtestancijaks, sen ližaks kuz' stancijad radab. Kezaaigal voib sadas Peledui-žilhosai Len-jogedme. Regionaline civiline lendimport (''UKX / УСК'') sijadase 10 km pohjoižhe lidnan keskusespäi, tehtas reisid Irkutskha, [[Krasnojarsk]]ha i vahtreisid Irkutskan agjan pohjoižhe.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Братская могила партизан, погибших за советскую власть (общий вид).jpg|Pölištunuziden nevondkundaližhe tobmudehe näht partizanoiden velleskaum (2015)
+Вид на Курорт.jpg|Nägu Kurortha sildaspäi (2012)
+Lena osetrovo.JPG|Osetrovo-jogistancijan sauvuz vl 2008
+Терминал Аэропорта Усть-Кута.jpg|Ust'-Kut-lendimportan terminal vl 2018
+Вокзал на станции Лена.jpg|Len-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Homaičendad ==
 <references/>
