--- a/Birüsinsk.mw
+++ b/Birüsinsk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Birüsinsk<br />Бирюсинск
- | Lidnanznam = Coat of Arms of Biryusinsk (Irkutsk oblast) (1977).png
+ | Lidnanznam = Biryusinsk COA (2012).gif
  | Flag = Flag of Biryusinsk.svg
  | Lidnanznam text = Birüsinskan lidnanznam
  | Flag text = Birüsinskan flag
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud [[Transsib]]an ''Sujetih-raudtesarakoks'' ({{lang-ru|разъезд Суетиха}}) vl 1897. Saudaškanzihe žilod senno vl 1899. Vl 1929 mecpilindtegim radaškanzi. Kätihe radnikžiloks vl 1934. Vspäi 1952 gidrolizan tegim radoi, pästi [[etilspirt]]ad da sötmižsepad vhesai 2005. Sujetih sai lidnan statusad nügüdläiženke nimenke vn 1967 11. päiväl semendkud, nimitihe jogen mödhe. Vhesai 2007 alištui Taišet-lidnan tobmudele oikti.
 
-Lidn šingotase mecan varhapanendal da pilindal, meblin tehmižel i leibänproduktoiden edheotandal.
+Birüsinsk šingotase mecan varhapanendal da pilindal, meblin tehmižel i leibänproduktoiden edheotandal.
 
 == Geografijan andmused ==
 Lidn sijadase [[Birüs (On)]]-jogen oiktal randal ([[Angar (jogi)|Angaran]] hurapol'ne bassein), 300 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 586 km suvipäivlaskmha orhal, 691 km «Sibir'»-trassadme (R-255) vai 682 km Transsib-raudtedme. Lähembaine lidn om [[Taišet]] 13 km päivnouzmha orhal, «Sibir'»-avtotel vai Transsibal.
@@ -27,7 +27,12 @@ Lidn sijadase [[Birüs (On)]]-jogen oiktal randal ([[Angar (jogi)|Angaran]] hura
 Birüsinsk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 8 981 ristitud, rajonan ühesandez. Kaikiš suremb ristitišt oli 13 461 eläjad vl 1970. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Eläbzdusen pühäpert' (om saudud vll 1998−2010) i Pühän Innokentii-irkutalaižen jumalanpert' (vspäi 1958) oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 8 981 ristitud, rajonan ühesandez. Kaikiš suremb ristitišt oli 13 461 eläjad vl 1970.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Eläbzdusen pühäpert'<ref>[http://taishet.blagochin.ru/xram-voskreseniya-xristova-g-biryusinsk/ Birüsinskan Sündun Eläbzdusen pühäpert' ''taishet.blagochin.ru''-saital.] {{ref-ru}}</ref> (om saudud vll 1998−2010) i Pühän Innokentii-irkutalaižen jumalanpert' (vspäi 1958) oma olmas lidnas.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://biryusinskmo.ru/ Lidnan municipaližen ühtnikan oficialine sait (''biryusinskmo.ru'').] {{ref-ru}}
