--- a/Angarsk.mw
+++ b/Angarsk.mw
@@ -25,14 +25,28 @@ Lidn sijadase [[Angar (jogi)|Angar]]- i Kitoi-jogiden keskes i niiden ühthejoks
 Lidnanvuitte Meget-žilo (8 918 rist. vl 2014, tel Irkutskannoks), 7 žilod, 3 küläd da 2 zajimkad mülüdas lidnümbrikho Angarskan ližaks. Lidnümbrikon pind — 1 150 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 233 567 ristitud. Kaikiš suremb lidnan ristitišt oli enamba 260 tuhad eläjid vll 1987−2001 (269 000 eläjid vll 1991−1993). Vl 2017 kaik 238 508 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 233 567 ristitud. Kaikiš suremb lidnan ristitišt oli enamba 260 tuhad eläjid vll 1987−2001 (269 000 eläjid vll 1991−1993). Vl 2017 kaik 238 508 ristitud elihe lidnümbrikos.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Stroican päjumalanpert', Jumalanmaman pühän Emäganpäivän jumalanpert' i časoun', [[protestantizm]]an jumalanpertid i [[islam]]an «Al' Furkan»-pühäpert' oma olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Stroican päjumalanpert'<ref>[http://sobory.ru/geo/locat/13525 Angarskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om saudud vll 1995−2006), Jumalanmaman pühän Emäganpäivän jumalanpert' i časoun', [[protestantizm]]an jumalanpertid i [[islam]]an «Al' Furkan»-pühäpert' oma olmas lidnas.
 
 == Ižanduz ==
-Lidn šingotase kivivoihimižen i himižen sarakon tegimil (poltuz, voi, voižimed, heretused, bazižed substancijad), elektrolizan kombinatal ([[uran (himine element)|uranan]] küllästamine, katalizatorad), sauvondmaterialiden edheotandoil (cement, gazbeton, torved, metalližkonstrukcijad) i sömtegimištol.
+Angarsk šingotase kivivoihimižen i himižen sarakon tegimil (poltuz, voi, voižimed, heretused, bazižed substancijad), elektrolizan kombinatal ([[uran (himine element)|uranan]] küllästamine, katalizatorad), sauvondmaterialiden edheotandoil (cement, gazbeton, torved, metalližkonstrukcijad) i sömtegimištol.
 
-Avtobusad, tramvaid, ezilidnelektrojonused (5 stancijad) da taksid oma kundaližeks transportaks lidnas. Lähembaine lendimport sijadase [[Irkutsk]]as.
+Avtobusad, tramvaid, ezilidnelektrojonused (viž stancijad) da taksid oma kundaližeks transportaks lidnas. Lähembaine lendimport sijadase [[Irkutsk]]as.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник политкаторжанам в Ангарске.jpg|Muštnik oigetud katargha politižile türmatud mehile (2019)
+Свято-Троицкий кафедральный собор (Ангарск).jpg|Ph. Stroican päjumalanpert', vn 2012 nägu
+Ангарская государственная техническая академия.jpg|Angarskan valdkundaline tehnine universitet (2011, ende akademii)
+ДК Нефтехимиков, Ангарск.jpg|«Neftehimik»-kul'turkeskuz (2019, ''Kivivoihimik'')
+Большая Арена Ермак.jpg|«Jermak»-sportkeskusen Sur' Aren (2012)
+Angarsk. Celebration (WR).tif|Praznuičend Angarskas (2001). Lidnan počtamt om tagamal huralpäi
+Angarsk railway station.jpeg|Angarsk-päraudtestancijan sauvuz vl 2011
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://duma-angarsk.ru/ Lidnan Duman oficialine sait (''duma-angarsk.ru'').] {{ref-ru}}
