Removing [[:c:File:Touba_moschee.jpg|Touba_moschee.jpg]], it has been deleted from Commons by [[:c:User:Ellywa|Ellywa]] because: per [[:c:Commons:Deletion requests/Files in Category:Grande Mosquée de Touba|]].

--- a/Tub_(lidn,_Senegal).mw
+++ b/Tub_(lidn,_Senegal).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 753,313
  | Voz' = 2013
  | Pind = 
- | Fail = Touba moschee.jpg
+ | Fail =
  | Pämez' = 
  | Telefonkod = +221-
  | Aigvö = [[UTC]]+0
