--- a/Tub_(lidn,_Senegal).mw
+++ b/Tub_(lidn,_Senegal).mw
@@ -8,18 +8,25 @@
  | Eläjiden lugu = 753,313
  | Voz' = 2013
  | Pind = 
- | Fail =
+ | Fail = Ville touba mosquee.jpg
  | Pämez' = 
  | Telefonkod = +221-
  | Aigvö = [[UTC]]+0
 }}
 '''Tub''' ({{lang-fr|Touba}}, {{lang-wo|Tuubaa}}) om lidn [[Senegal]]an päivlaskmas, mülüb [[Diurbelin agj]]aha. Se om valdkundan kahtenz' lidn eläjiden lugun mödhe.
 
-Eländpunkt om olmas vspäi 1887 sijal, kus sufizman Müridija-ordenan alusenpanii, Amadu Bamba Mbake-šeih (1853−1927), nägui taivhališt vauktust. Hän om Senegalan [[islam]]an hengeline lider. Lidnan nimituz libub araban kelen ''ţûbâ''-sanaspäi «oza», «magituz». Oli peneks pit'kan aigan, no kändihe valdkundan kul'turan keskuseks šeihan mahapanendan jäl'ghe, sur' islaman pühäpert' om vaumitud vodele 1963 lidnan keskuses.
+== Istorii ==
+Eländpunkt om olmas vspäi 1887 sijal, kus sufizman Müridija-ordenan alusenpanii, Amadu Bamba Mbake-šeih (1853−1927), nägui taivhališt vauktust. Hän om Senegalan [[islam]]an hengeline lider. Lidnan nimituz libub araban kelen ''ţûbâ''-sanaspäi «oza», «magituz».
 
+Tub oli peneks pit'kan aigan, no kändihe valdkundan kul'turan keskuseks šeihan mahapanendan jäl'ghe, sur' islaman pühäpert' om vaumitud vodele 1963 lidnan keskuses.
+
+== Geografijan andmused ==
 Lidn sijadase agjan pohjoižpäivnouzmas, 35 m ü.m.t. keskmäižel korktusel. Om avtotesol'meks. Matkad [[Dakar]]hasai om 184 km päivlaskmha.
 
-Vl 2013 eläjiden lugu oli 753 313 ristitud, agjan pol'. Kaikiš suremb ristitišt om nügüd', läz 1 mln eläjid lidnaglomeracijas (2018).
+Vl 2013 eläjiden lugu oli 753 313 ristitud, agjan pol'. Kaikiš suremb ristitišt om nügüd', läz 1 mln eläjid om lidnaglomeracijas (2018).
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Touba, Senegal}}
 
