*Empty MediaWiki Message*

--- a/Argentin.mw
+++ b/Argentin.mw
@@ -27,7 +27,7 @@ Vn 1816 9. päiväl heinkud Argentin tedištoiti ičeze ripmatomudes [[Ispanii|I
 Valdkundan ezmäine Konstitucii ({{lang-es|Constitución}}) oli väges vspäi 1811. Nügüdläine kümnenz' lugul Konstitucii<ref>[http://es.wikisource.org/wiki/Constituci%C3%B3n_de_la_Naci%C3%B3n_Argentina_(1994) Argentinan Tazovaldkundan Konstitucijan tekst vn 1994 vajehtusidenke Vikipurtkiš.] {{ref-es}}</ref><ref>[http://www.constituteproject.org/ontology/Argentina?lang=en Argentinan Konstitucijan tekst ''constituteproject.org''-saital.] {{ref-en}}</ref> om vahvištadud vl 1983, se om kudenden Konstitucijan (1853) ümbriradmine i om väges vn 1994 vajehtusidenke.
 
 == Geografijan andmused ==
-[[Fail:Argentina topo blank.jpg|thumb|left|250px|Argentinan topografine kart.]]
+[[Fail:Argentina topo blank.jpg|thumb|left|250px|Argentinan topografine kart]]
 Argentin om mavaldkundröunoiš [[Čili]]nke päivlaskmas (röunan piduz — 6691 km), [[Bolivii|Bolivijanke]] (942 km) da [[Paragvai]]nke (2531 km) pohjoižes, [[Brazilii|Brazilijanke]] (1263 km) da [[Urugvai]]nke (541 km) pohjoižpäivnouzmas. Ühthine röunoiden piduz — 11,968 km. Valdkundan päivnouzmaižed randad lainištab [[Atlantine valdmeri]]. Randanpird — 4989 km.
 
 Kaikiš korktemb čokkoim om [[Akonkagua]]-mägenoc, 6960 m valdmeren pindan päl.
@@ -39,7 +39,7 @@ Ohjandusen form om federativine [[prezidentine tazovaldkund|prezidentine]] tazov
 
 Parlament om kaks'kodine Nacionaline Kongress ({{lang-es|Congreso de la Nación Argentina}}). Üläkodi om Senat (''Senado'') 72 ühtnijanke kudeks vodeks, kaik rahvaz valičeb koumandest kaikuččel kahtel vodel. Alakodi om Eztajiden kodi (''Cámara de Diputados'') 257 ühtnijanke nelläks vodeks, kaik rahvaz valičeb sen pol't kaikuččel kahtel vodel.
 
-Valdkundan järgenduseližed pävaličendad oliba vn 2019 27. päiväl redukud, valitihe prezidentad, parlamentan alakodin ühtnijoid i Senatan koumandest. Nügüdläine Argentinan prezident om [[Fernandes Al'berto (politikanmez')|Al'berto Fernandes]] (sai 48,1%, radoi Argentinan päministran vll 2003−2008), varaprezident — [[Kiršner Kristina|Kristina Fernandes de Kiršner]] (oli valdkundan prezidentan 10.12.2007−10.12.2015), päministr om [[Santjago Kafiero]], kaik koume ratas nenil radnikusil vn 2019 tal'vkun 10. päiväspäi.
+Valdkundan järgenduseližed pävaličendad oliba vn 2019 27. päiväl redukud, valitihe prezidentad, parlamentan alakodin ühtnijoid i Senatan koumandest. Nügüdläine Argentinan prezident om [[Fernandes Al'berto (politikanmez')|Al'berto Fernandes]] (sai 48,1%, radoi Argentinan päministran vll 2003−2008), varaprezident — [[Kristina Fernandes de Kiršner]] (oli valdkundan prezidentan 10.12.2007−10.12.2015), päministr om [[Santjago Kafiero]], kaik koume ratas nenil radnikusil vn 2019 tal'vkun 10. päiväspäi.
 
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Argentinan administrativiž-territorialine jagand]].''
@@ -49,7 +49,7 @@ Argentin jagase 23 agjaks (provincijaks), sen ližaks 1 pälidnan avtonomine [[B
 == Eläjad ==
 Argentinas elädas [[argentinalaižed]]. Vl 2010 eläjiden lugu oli 40 091 359 ristitud. Kaikiš suremb ristitišt om nügüd'.
 
-Augotižlibundan mödhe (2010): [[evropalaižed]] (Italijaspäi i Ispanijaspäi tobjimalaz) da [[mestizo]] — 97,2%, [[indejalaižed]] — 2,4%, [[afrikalaižed]] — 0,4%.
+Valdkundan ristitišt augotižlibundan mödhe (2010): [[evropalaižed]] (Italijaspäi i Ispanijaspäi tobjimalaz) da [[mestizo]] — 97,2%, [[indejalaižed]] — 2,4%, [[afrikalaižed]] — 0,4%.
 
 Religijan mödhe (2020) 92% eläjid oma riman [[katoline jumalankodikund|katolikad]] (valdkundaline religii; vaiše videndez tuleb pühäpertihe), [[protestantizm|protestantad]] — 2%, [[judaizm]]an uskojad — 2%, toižed uskojad — 4%.
 
