*Empty MediaWiki Message*

--- a/Fernandes_de_Kiršner_Kristina.mw
+++ b/Fernandes_de_Kiršner_Kristina.mw
@@ -5,7 +5,7 @@
 '''Kristina Elizabet Fernandes de Kiršner''' ({{lang-es|Cristina Elisabet Fernández de Kirchner}}; sünd. [[19. uhoku]] [[1953]], [[La Plat]], [[Argentin]]) om Argentinan varaprezident. Enzne, 55. Argentinan pämez' (prezident, 10.12.2007−10.12.2015), sil radsijal vajehti ičeze [[Nestor Kiršner]]-mužikad.
 
 == Biografii ==
-Fernandes om La Platan rahvahaližen universitetan pästnikan, openui sen psihologijan fakul'tetas vspäi 1973, no säti tundmust siš ičeze mužikanke, i vll 1974−1976 lopi opendust juridižel fakul'tetal hänen kartte. Edel prezidentan strokud naine oli valitud valdkundan parlamentha severz'-se kerdad. Prezidentan radsijal jätksi Nestor Kiršneran satusekast ekonomišt politikad voziden 2001−2002 valdkundvelgan krizisan jäl'ghe.
+Fernandes om La Platan rahvahaližen universitetan pästnikan, openui sen psihologijan fakul'tetas vspäi 1973, no sädi tundmust universitetas ičeze mužikanke, i vll 1974−1976 lopi opendust juridižel fakul'tetal hänen kartte. Edel prezidentan strokud naine oli valitud valdkundan parlamentha severz'-se kerdad. Prezidentan radsijal jätksi Nestor Kiršneran satusekast ekonomišt politikad voziden 2001−2002 valdkundvelgan krizisan jäl'ghe.
 
 Vl 2017 Kristina om valitud parlamentan senatha möst i radab sen ezimehen vn 2019 tal'vkun 10. päiväspäi, se radnikuz nimitase Argentinan varaprezidentaks valdkundan Konstitucijan mödhe.
 
