--- a/Homnesjäl'gen.mw
+++ b/Homnesjäl'gen.mw
@@ -1,3 +1,33 @@
+{{Fil'm
+ | Nimi         = Homnesjäl'gen<br />The Day After Tomorrow
+ | Kuva         =
+ | Kuvan ümbrikirjutand =
+ | Voz'         = 2004.
+ | Valdkund     = {{USA}}
+ | Kel'         = [[anglijan kel'|anglijan]]
+ | Žanr         = fil'm-katastrof
+ | Režissör     = [[Emmerih Roland|Roland Emmerih]]
+ | Scenarii     = Roland Emmerih,<br />Džeffri Načmanoff
+ | Muzikankirjutai = [[Haral'd Klozer]]
+ | Idejan tegii =
+ | Aktörad      = [[Dennis Kueid]],<br />[[Džeik Džillenhol]],<br />[[Emmi Rossum]],<br/ >[[Ien Holm]],<br/ >[[Sila Uord]]
+ | Prodüser     = Roland Emmerih,<br />[[Mark Gordon]]
+ | Kompanii     = [[20th Century Fox]]
+ | Studii       = Centropolis Entertainment<br/>Lion Gates Films<br/>Mark Gordon Company
+ | Piduz        = 124 minutad
+ | Montaž       =
+ | Operator     = Uli Štaiger
+ | Arvlahjad    =
+ | Büdžet       = 125 mln US$
+ | Salhed       = 552 mln US$
+ | Salhed Venämas =
+ | Edeline fil'm =
+ | Jäl'ghine fil'm =
+ | Röunatuz igäs =
+ | Sait         =
+ | imdb_id      = 0319262
+ | kp_id        =
+}}
 '''«Homnesjäl'gen»''' ({{lang-en|The Day After Tomorrow}}) om voden [[2004]] tetab [[Amerikan Ühtenzoittud Valdkundad|amerikaine]] [[fil'm-katastrof]]. Režissör — [[Emmerih Roland|Roland Emmerih]].
 
 == Rolid ==
