--- a/Mustafa_Nureddin.mw
+++ b/Mustafa_Nureddin.mw
@@ -1,16 +1,16 @@
-'''Moustafa Noureddine''' (sünd. [[31. eloku]] [[1996]], [[Sauhadż]], [[Egipt]]) om egiptalaine kirjutai.
+'''Mustafa Nureddin''' ({{lang-en|Moustafa Noureddine}}, sünd. [[31. eloku]] [[1996]], [[Sauhadž]], [[Egipt]]) om egiptalaine kirjutai.
 
 == Valitud bibliografii ==
-* 2015 — Khawatir Moustafa Noureddine<ref name="openlibrary">[http://openlibrary.org/works/OL17859026W «Khawatir Moustafa Noureddine» ''openlibrary.org''-saital.] {{ref-en}}</ref><ref name="books-library">[https://books-library.com/read/1474778229 «Khawatir Moustafa Noureddine» ''books-library.com''-saital.] {{ref-ar}}</ref>  (Moustafa Noureddine citatad)
+* 2015 — Khawatir Moustafa Noureddine<ref name="openlibrary">[http://openlibrary.org/works/OL17859026W «Khawatir Moustafa Noureddine» ''openlibrary.org''-saital.] {{ref-en}}</ref><ref name="books-library">[https://books-library.com/read/1474778229 «Khawatir Moustafa Noureddine» ''books-library.com''-saital.] {{ref-ar}}</ref> (Mustafa Nureddinan citatad)
 * 2017 — 7th Century Before Birth (7. voz'sada edel sündundad)
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [https://www.imdb.com/name/nm9059716/ Moustafa Noureddine — IMDB.]
-* [https://www.pinterest.com/NouraldeenOfficial Moustafa Noureddine — Pinterest.]
-* [https://www.quotes.net/authors/Moustafa+Nouraldeen Moustafa Noureddine — Quotes.]
+* [https://www.imdb.com/name/nm9059716/ Mustafa Nureddin — ''IMDB.com''.] {{ref-en}}
+* [https://www.pinterest.com/NouraldeenOfficial Mustafa Nureddin — ''Pinterest.com''.] {{ref-en}}
+* [https://www.quotes.net/authors/Moustafa+Nouraldeen Mustafa Nureddin — ''Quotes.net''.] {{ref-en}}
 
 [[Kategorii:Egiptan kirjutajad]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
