--- a/Babaksad.mw
+++ b/Babaksad.mw
@@ -5,10 +5,15 @@ Areal — [[Kitai]] (sidä kesken [[Honkong]]), [[Indii]], [[Mjanmar]].
 
 == Klassifikacii ==
 Om nell' erikod, kaik om [[kadojad erikad|kadomižen grazindan]] al:
-* ''[[Babax koslowi]]'' (Kitai)
+* ''[[Babax koslowi]]'' — [[Kozlovan babaks]] (Kitai)
 * ''Babax lanceolatus'' — [[Kitajine babaks]] (Indii, Kitai, Mjanmar; nüg. ''Pterorhinus lanceolatus'')
-* ''[[Babax waddelli]]'' (Indii, Kitai)
+* ''[[Babax waddelli]]'' — [[Sur' babaks]] (Indii, Kitai)
 * ''Babax woodi''
+
+== Ümbrikirjutand ==
+Suugad oma lühüdad kehkranvuiččed 10..14 sm pitte, händ om pit'k, 16 sanimetrhasai. N'ok om pit'kahk i kover vähäižin. Nenasäriden pind om hibusekaz.
+
+Lindud elädas tropikoiden i subtropižen vönen mecoiš da penzhištos, mägiden pautkil i alangoiš. Tibetine ''Babax koslowi''-erik vasttase korktusil 4500 metrhasai ü.m.t..
 
 == Homaičendad ==
 <references />
