--- a/Babaksad.mw
+++ b/Babaksad.mw
@@ -5,9 +5,9 @@ Areal — [[Kitai]] (sidä kesken [[Honkong]]), [[Indii]], [[Mjanmar]].
 
 == Klassifikacii ==
 Om nell' erikod, kaik om [[kadojad erikad|kadomižen grazindan]] al:
-* ''[[Babax koslowi]]'' — [[Kozlovan babaks]] (Kitai)
+* ''Babax koslowi'' — [[Kozlovan babaks]] (Kitain Tibetan päivnouzm i Cinhai-agj; nüg. ''Pterorhinus koslowi'')
 * ''Babax lanceolatus'' — [[Kitajine babaks]] (Indii, Kitai, Mjanmar; nüg. ''Pterorhinus lanceolatus'')
-* ''[[Babax waddelli]]'' — [[Sur' babaks]] (Indii, Kitai)
+* ''Babax waddelli'' — [[Sur' babaks]] (Indii, Kitai; nüg. ''Pterorhinus waddelli'')
 * ''Babax woodi''
 
 == Ümbrikirjutand ==
